# ml-aos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
earnest-serenity-33/: config.yaml
experiments/: config-jf.yaml  config.yaml  new-config.yaml
experiments/atomic-water-29/: config.yaml
experiments/azure-silence-22/: config.yaml
experiments/blooming-firefly-33/: config.yaml
experiments/cerulean-wind-21/: config.yaml
experiments/colorful-durian-13/: config.yaml
experiments/dutiful-shape-34/: config.yaml
experiments/fiery-forest-30/: config.yaml
experiments/flowing-pine-23/: config.yaml
experiments/generous-plasma-24/: config.yaml
experiments/logical-morning-28/: config.yaml
experiments/lyric-sound-20/: config.yaml
experiments/misty-universe-25/: config.yaml
experiments/resilient-breeze-27/: config.yaml
experiments/super-sea-18/: config.yaml
experiments/swept-serenity-14/: config.yaml
experiments/toasty-oath-16/: config.yaml
experiments/true-shape-17/: config.yaml
experiments/woven-durian-26/: config.yaml
experiments/young-moon-19/: config.yaml
ml_aos/: cli.py  dataloader.py  david_net.py  lightning.py  plotting.py  utils.py  wave_net.py  wavenet.py
notebooks/: crop_test.ipynb  donut_normalization_ipynb.ipynb  donut_sim_demo.ipynb  easy_circle_fit.ipynb  lr_search.ipynb  nohup.out  other_metrics.ipynb  overfit_DavidNet.ipynb  overfit_DavidNet_DavidsDonuts.ipynb  overfit_DavidNet_JFsDonuts.ipynb  plot_predictions.ipynb  prob_blended.ipynb
