[tool.poetry]
name = "ml_aos"
version = "0.1.0"
description = "Machine Learning methods for Rubin AOS."
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.8.0"
flake8-eradicate = "^1.2.0"
flake8-print = "^4.0.0"
flake8-simplify = "^0.14.5"
jupyterlab-flake8 = "^0.7.1"
pandas-vet = "^0.2.2"
flake8-black = "^0.2.3"
flake8-broken-line = "^0.4.0"
flake8-docstrings = "^1.6.0"
flake8-markdown = "^0.3.0"
flake8-isort = "^4.1.1"
flake8-bugbear = "^22.1.11"
pep8-naming = "^0.12.1"
flake8-builtins = "^1.5.3"
flake8-pytest-style = "^1.6.0"
flake8-tidy-imports = "^4.6.0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
