[tool.poetry]
name = "ml_aos"
version = "0.1.0"
description = "Machine Learning methods for Rubin AOS."
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
astropy = "^5.2.1"
pyarrow = "^11.0.0"
jupyterlab = "^3.6.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.0"
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-markdown = "^0.4.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.7.2"
flake8-simplify = "^0.19.3"
flake8-tidy-imports = "^4.8.0"
pep8-naming = "^0.13.3"
pandas-vet = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pyright]
reportGeneralTypeIssues = false
